RESOLVED FIXED68985
Wrong integer checks in JSVALUE32_64 DFG JIT
https://bugs.webkit.org/show_bug.cgi?id=68985
Summary Wrong integer checks in JSVALUE32_64 DFG JIT
Yuqiang Xian
Reported 2011-09-28 02:10:10 PDT
There are a couple of wrong integer checks in JSVALUE32_64 DFG JIT code.
Attachments
the patch (2.46 KB, patch)
2011-09-28 02:12 PDT, Yuqiang Xian
no flags
Yuqiang Xian
Comment 1 2011-09-28 02:12:49 PDT
Created attachment 108987 [details] the patch
Geoffrey Garen
Comment 2 2011-09-28 09:12:13 PDT
Comment on attachment 108987 [details] the patch r=me
WebKit Review Bot
Comment 3 2011-09-28 10:14:25 PDT
Comment on attachment 108987 [details] the patch Clearing flags on attachment: 108987 Committed r96230: <http://trac.webkit.org/changeset/96230>
WebKit Review Bot
Comment 4 2011-09-28 10:14:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.