Wrong integer checks in JSVALUE32_64 DFG JIT https://bugs.webkit.org/show_bug.cgi?id=68985

Patch by Yuqiang Xian <yuqiang.xian@intel.com> on 2011-09-28
Reviewed by Geoffrey Garen.

* dfg/DFGJITCodeGenerator32_64.cpp:
(JSC::DFG::JITCodeGenerator::fillDouble):
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::fillSpeculateDouble):

Canonical link: https://commits.webkit.org/84999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96230 268f45cc-cd09-0410-ab3c-d52691b4dbfc